--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,1 +1,22 @@
-<p>header works!</p>
+<header>
+    <nav>
+        <div class="logo"><img src="assets/icons/logo.png" alt="logo"><span>LearnByte</span></div>
+        <div class="header">
+            <ul>
+                <li>Home</li>
+                <li>Courses</li>
+                <li>Blog</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+        <div class="action">
+            <button mat-icon-button color="primary" [matMenuTriggerFor]="menu"><mat-icon>face</mat-icon></button>
+            <mat-menu #menu="matMenu">
+                <div class="action-btn">
+                    <button matRipple [matRippleColor]="'#cbbafe'">Sign In</button>
+                    <button matRipple [matRippleColor]="'#cbbafe'">Sign Up</button>
+                </div>
+            </mat-menu>
+        </div>
+    </nav>
+</header>
