--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -3,7 +3,7 @@ header {
     top: 0px;
     background-color: #efebfb;
     width: 100%;
-    z-index: 9999;
+    z-index: 999;
     
     nav {
         display: flex;
@@ -111,7 +111,7 @@ header {
             width: 100%;
             padding: 8px;
             margin-bottom: 2px;
-            font-size: 16px;
+            font-size: 14px;
             font-weight: 600;
             transition: all ease 0.5s;
 
@@ -122,3 +122,189 @@ header {
         }
     }
 }
+
+
+
+
+// .featured-courses {
+//     margin-top: 60px;
+//     padding: 30px 10%;
+//     background: linear-gradient(180deg, rgba(255, 255, 255, 0.8240546218) 47%, #F5B88B 42%);
+
+//     .featured {
+//         color: #1B2133;
+//         text-align: center;
+//         font-family: Montserrat;
+//         font-size: 24px;
+//         font-style: normal;
+//         font-weight: 700;
+//         line-height: 36px;
+//     }
+// }
+
+// ::ng-deep {
+//     .owl-stage-outer {
+//         .owl-stage {
+//             display: flex;
+
+//             .owl-item {
+//                 max-width: 250px !important;
+//                 min-width: 250px !important;
+
+//                 .image {
+//                     width: 100%;
+//                     height: 140px;
+//                     position: relative;
+//                     border-radius: 12px 12px 0px 0px;
+//                     overflow: hidden;
+
+//                     img {
+//                         width: 100%;
+//                         height: 100%;
+//                         object-fit: fill;
+//                     }
+
+//                     .duration {
+//                         position: absolute;
+//                         bottom: 4px;
+//                         right: 4px;
+//                         display: flex;
+//                         justify-content: center;
+//                         align-items: center;
+//                         padding: 4px;
+//                         background-color: #000;
+//                         border-radius: 4px;
+//                         color: rgba(255, 255, 255, 0.95);
+//                         font-family: Lato;
+//                         font-size: 12px;
+//                         font-style: normal;
+//                         font-weight: 700;
+//                         line-height: normal;
+
+//                         svg {
+//                             margin-right: 4px;
+//                         }
+//                     }
+
+//                 }
+
+//                 .card-footer {
+//                     border-radius: 0px 0px 12px 12px;
+//                     border: 1px solid rgba(0, 0, 0, 0.08);
+//                     background: #FFF;
+//                     padding: 0px 12px;
+
+//                     .course {
+//                         display: flex;
+//                         padding: 8px;
+//                         align-items: center;
+//                         border-radius: 16px;
+//                         border: 1px solid #EF951E;
+//                         background: #FEFAF4;
+//                         width: 74px;
+//                         height: 24px;
+//                         margin-top: 12px;
+
+//                         svg {
+//                             margin-right: 4px;
+//                         }
+
+//                         span {
+//                             color: #000;
+//                             text-align: center;
+//                             font-family: Lato;
+//                             font-size: 12px;
+//                             font-style: normal;
+//                             font-weight: 400;
+//                             line-height: normal;
+//                         }
+//                     }
+
+//                     .decription {
+//                         color: rgba(0, 0, 0, 0.87);
+//                         font-family: Lato;
+//                         font-size: 14px;
+//                         font-style: normal;
+//                         font-weight: 700;
+//                         line-height: normal;
+//                         margin: 12px 0px;
+//                         letter-spacing: 0px;
+//                     }
+
+//                     .auther {
+//                         display: flex;
+//                         align-items: center;
+//                         margin-bottom: 12px;
+
+//                         img {
+//                             width: 24px;
+//                             height: 24px;
+//                             object-fit: fill;
+//                             margin-right: 4px;
+//                         }
+
+//                         h1 {
+//                             color: rgba(0, 0, 0, 0.87);
+//                             font-family: Lato;
+//                             font-size: 12px;
+//                             font-style: normal;
+//                             font-weight: 400;
+//                             line-height: normal;
+//                             margin: 0px;
+//                             letter-spacing: 0px;
+//                         }
+//                     }
+
+//                     .rate {
+//                         margin-bottom: 8px;
+
+//                         svg {
+//                             margin-right: 4px;
+//                         }
+
+//                         span {
+//                             color: rgba(0, 0, 0, 0.60);
+//                             font-family: Lato;
+//                             font-size: 12px;
+//                             font-style: normal;
+//                             font-weight: 400;
+//                             line-height: normal;
+//                             letter-spacing: 0px;
+//                         }
+//                     }
+//                 }
+
+//             }
+//         }
+//     }
+// }
+
+// .owl-nav {
+//     text-align: center;
+//     margin: 20px 0px;
+
+//     svg {
+//         cursor: pointer;
+//     }
+
+//     button {
+//         border: none;
+//         background: transparent;
+//     }
+// }
+
+// .owl-dot {
+//     display: inline-block;
+//     width: 6px;
+//     height: 6px;
+//     background-color: #00000078;
+//     border-radius: 50%;
+//     cursor: pointer;
+//     margin: 0px 4px;
+
+//     .active {
+//         width: 18px !important;
+//         border-radius: 4px !important;
+//         background-color: #1B4CA1 !important;
+//     }
+// }
