--- a/src/app/shared/components/layout/layout.component.html
+++ b/src/app/shared/components/layout/layout.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="layout">
     <div class="sidebar" [ngStyle]="{ 'width':sidebarTog?'200px':'0px', 'display':sidebarTog?'block':'none'}">
-        <lsidebar></lsidebar>
+        <lsidebar [lsidebarData]="lsidebarData"></lsidebar>
     </div>
     <div class="content-area"
         [ngStyle]="{ 'width':sidebarTog?'calc(100% - 200px)':'calc(100% - 0px)', 'margin-left':sidebarTog?'200px':'0px'}">
@@ -18,6 +18,6 @@
         <div class="content">
             <router-outlet></router-outlet>
         </div>
+        <app-footer></app-footer>
     </div>
 </div>
-<app-footer></app-footer>
