--- a/src/app/shared/components/contentbox/contentbox.component.scss
+++ b/src/app/shared/components/contentbox/contentbox.component.scss
@@ -138,14 +138,47 @@
                             }
                         }
                     }
-                @media (min-width:0px) and (max-width:500px){
-                    width: 100%;
-                }
-                @media (min-width:501px) and (max-width:900px){
-                    width: 50%;
-                }
+
+                    @media (min-width:0px) and (max-width:500px) {
+                        width: 100%;
+                    }
+
+                    @media (min-width:501px) and (max-width:900px) {
+                        width: 50%;
+                    }
                 }
             }
+        }
+    }
+}
+
+.search-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .search-input {
+        display: flex;
+        align-items: center;
+        position: relative;
+        max-width: max-content;
+
+        input {
+            padding: 2px 34px 2px 8px;
+            height: 36px;
+            outline: none;
+            color: #7f56d9;
+            font-size: 16px;
+            font-weight: 500;
+            border: 1px solid #7f56d9;
+            border-radius: 4px;
+        }
+
+        mat-icon {
+            color: #7f56d9;
+            position: absolute;
+            right: 4px;
+            top: 6px;
         }
     }
 }
