--- a/src/app/shared/components/gbsearch/gbsearch.component.scss
+++ b/src/app/shared/components/gbsearch/gbsearch.component.scss
@@ -5,7 +5,7 @@
     max-width: max-content;
 
     input {
-        padding: 2px 8px;
+        padding: 2px 34px 2px 8px;
         height: 36px;
         outline: none;
         color: #7f56d9;
