--- a/src/app/shared/components/notfound/notfound.component.html
+++ b/src/app/shared/components/notfound/notfound.component.html
@@ -1,6 +1,6 @@
 <div class="not-found">
     <span class="text404">404</span>
-    <h1 class="title">We lost this page</h1>
+    <h1 class="title">We Lost This Page!</h1>
     <p class="discription">the page you are looking for doesn't exist or has been moved</p>
     <div class="action">
         <button class="go-back" (click)="goback()">Go back</button>
