--- a/src/app/courses/sequelize/dashboard/dashboard.component.html
+++ b/src/app/courses/sequelize/dashboard/dashboard.component.html
@@ -1,1 +1,1 @@
-<app-contentbox [contentData]="contentData"></app-contentbox>
+<app-contentbox [contentData]="contentData" [contentFilterData]="contentData.list"></app-contentbox>
