--- a/src/app/shared/components/gbsearch/gbsearch.component.html
+++ b/src/app/shared/components/gbsearch/gbsearch.component.html
@@ -1,4 +1,4 @@
 <div class="search-input">
-    <input type="text" [placeholder]="placeholder">
+    <input type="text" [placeholder]="placeholder" (keyup)="gSearch($event)">
     <mat-icon>search</mat-icon>
 </div>
