--- a/src/app/shared/components/notfound/notfound.component.scss
+++ b/src/app/shared/components/notfound/notfound.component.scss
@@ -18,12 +18,15 @@
         font-size: 40px;
         font-weight: 700;
         color: #06241B;
+        text-align: center;
     }
 
     .discription {
         color: #7E7EAA;
         font-size: 16px;
         font-weight: 500;
+        padding: 0px 16px;
+        text-align: center;
     }
 
     .action {
@@ -50,6 +53,38 @@
             @extend .go-back;
         }
     }
+}
 
 
+@media (min-width:0px) and (max-width:320px) {
+    .not-found {
+        .text404 {
+            font-size: 10rem;
+        }
+
+        .title {
+            font-size: 34px;
+            line-height: 14px;
+        }
+    }
+}
+
+@media (min-width:320px) and (max-width:425px) {
+    .not-found {
+        .text404 {
+            font-size: 12rem;
+        }
+
+        .title {
+            font-size: 40px;
+        }
+    }
+}
+
+@media (min-width:425px) and (max-width:550px) {
+    .not-found {
+        .text404 {
+            font-size: 15rem;
+        }
+    }
 }
