--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,12 +1,12 @@
 <header>
     <nav>
-        <div class="logo"><img src="assets/icons/logo.png" alt="logo"><span>LearnByte</span></div>
+        <div class="logo"><img src="assets/icons/logo.png" alt="logo" (click)="gotoRoute('')"><span (click)="gotoRoute('')">LearnByte</span></div>
         <div class="header">
             <ul>
                 <li (click)="gotoRoute('')">Home</li>
                 <li (click)="gotoRoute('courses')">Courses</li>
                 <li (click)="gotoRoute('posts')">Posts</li>
-                <!-- <li (click)="gotoRoute('contact')">Contact</li> -->
+                <li (click)="gotoRoute('')">Contact</li>
             </ul>
         </div>
         <div class="action">
