contact page added

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -16,7 +16,7 @@
                     <li (click)="goto('')">About</li>
                     <li (click)="goto('posts')">Blog</li>
                     <li (click)="goto('courses')">Course</li>
-                    <li (click)="goto('')">Contact</li>
+                    <li (click)="goto('contact')">Contact</li>
                 </ul>
             </div>
             <div class="contact">
