--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -7,7 +7,7 @@
         display: flex;
         align-items: baseline;
         justify-content: space-between;
-
+        flex-wrap: wrap;
         .heading {
             h1 {
                 font-size: 28px;
