--- a/src/app/shared/components/course-list/course-list.component.scss
+++ b/src/app/shared/components/course-list/course-list.component.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     gap: 20px;
     overflow: hidden;
-    margin-bottom: 5%;
+    margin: 0px auto 5%;
     flex-wrap: wrap;
 
     .cards {
