--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,12 +1,13 @@
 <header>
     <nav>
-        <div class="logo"><img src="assets/icons/logo.png" alt="logo" (click)="gotoRoute('')"><span (click)="gotoRoute('')">LearnByte</span></div>
+        <div class="logo"><img src="assets/icons/logo.png" alt="logo" (click)="gotoRoute('')"><span
+                (click)="gotoRoute('')">LearnByte</span></div>
         <div class="header">
             <ul>
                 <li (click)="gotoRoute('')">Home</li>
                 <li (click)="gotoRoute('courses')">Courses</li>
                 <li (click)="gotoRoute('posts')">Posts</li>
-                <li (click)="gotoRoute('')">Contact</li>
+                <li (click)="gotoRoute('contact')">Contact</li>
             </ul>
         </div>
         <div class="action">
@@ -24,7 +25,7 @@
                     <button (click)="gotoRoute('')">Home</button>
                     <button (click)="gotoRoute('courses')">Courses</button>
                     <button (click)="gotoRoute('posts')">Posts</button>
-                    <!-- <button (click)="gotoRoute('contact')">Contact</button> -->
+                    <button (click)="gotoRoute('contact')">Contact</button>
                     <button (click)="gotoRoute('auth')">Sign In</button>
                 </div>
             </mat-menu>
