--- a/src/app/shared/components/layout/layout.component.scss
+++ b/src/app/shared/components/layout/layout.component.scss
@@ -47,6 +47,7 @@
             max-height: fit-content;
             min-height: 100vh;
             margin-bottom: 10%;
+            padding: 0px 4%;
         }
     }
 }
