--- a/src/app/shared/components/post-list/post-list.component.scss
+++ b/src/app/shared/components/post-list/post-list.component.scss
@@ -5,7 +5,8 @@
     justify-content: center;
     align-items: center;
     padding: 36px 0px;
-
+    margin-bottom: 6%;
+    
     .cards {
         background-color: #fff;
         border-radius: 16px;
