--- a/src/app/shared/components/postdetail/postdetail.component.scss
+++ b/src/app/shared/components/postdetail/postdetail.component.scss
@@ -66,7 +66,7 @@
         .post-image {
             max-width: 100%;
             min-width: 100%;
-            height: 400px;
+            height: max-content;
             margin: 10px 0px;
 
             border: 1px solid #7f56d966;
@@ -76,7 +76,7 @@
 
             img {
                 width: 100%;
-                height: 100%;
+                height: auto;
                 object-fit: fill;
                 border-radius: 10px;
             }
@@ -136,8 +136,7 @@
                         text-decoration: none;
 
                         &:hover {
-                            color: #7c0000;
-
+                            color: #EF670D;
                             &::after {
                                 width: 100%;
                                 opacity: 1;
@@ -151,7 +150,7 @@
                             height: 1px;
                             left: 0;
                             position: absolute;
-                            background: #7c0000;
+                            background: #EF670D;
                             transition: width 0.3s ease 0s, opacity 0.3s ease 0s;
                             width: 0;
                             border-radius: 4px;
@@ -184,6 +183,7 @@
     post-list {
         .card-list {
             padding: 0px;
+            margin-bottom: 0%;
         }
     }
 }
