--- a/src/app/shared/components/contentbox/contentbox.component.scss
+++ b/src/app/shared/components/contentbox/contentbox.component.scss
@@ -5,7 +5,7 @@
 
     .content_page {
         text-align: center;
-        margin: 14vh 20px 3%;
+        margin: 8rem 20px 3%;
         position: relative;
 
         gbsearch {
