--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -3,7 +3,7 @@
         <div class="content">
             <div class="about">
                 <div class="logo">
-                    <img src="assets/icons/logo1.png" alt="logo1">
+                    <img src="assets/icons/2.png" alt="logo1">
                     <span>LearnByte</span>
                 </div>
                 <p class="discription">Veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
