--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <nav>
-        <div class="logo"><img src="assets/icons/logo.png" alt="logo" (click)="gotoRoute('')"><span
+        <div class="logo"><img src="assets/icons/1.png" alt="logo" (click)="gotoRoute('')"><span
                 (click)="gotoRoute('')">LearnByte</span></div>
         <div class="header">
             <ul>
