--- a/src/app/shared/components/post-list/post-list.component.scss
+++ b/src/app/shared/components/post-list/post-list.component.scss
@@ -5,8 +5,9 @@
     justify-content: center;
     align-items: center;
     padding: 36px 0px;
-    margin-bottom: 6%;
-    
+    margin: 0px auto 6%;
+    max-width: 1400px;
+
     .cards {
         background-color: #fff;
         border-radius: 16px;
