--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -1,98 +1,128 @@
-.contact-us {
-    background-color: #e4e4ff;
-    padding: 40px 8%;
-    border-radius: 20px;
-    margin: 18vh auto 10%;
-    max-width: 50%;
+.contact-container {
+    .contact-us {
+        background-color: #e4e4ff;
+        padding: 40px 8%;
+        margin: 10rem auto 12rem;
+        max-width: 50%;
+        position: relative;
+        border-top-left-radius: 20px;
+        border-bottom-right-radius: 20px;
 
-    .heading {}
 
-    .comment-form {
-        .comment {
-            margin-bottom: 16px;
-            textarea {
-                background-color: transparent;
-                border: 1px solid #7F56D9;
-                border-radius: 4px;
-                max-height: max-content;
-                outline: none;
-                padding: 2px 6px;
-                font-size: 14px;
-                font-weight: 500;
-                color: #7F56D9;
-                resize: vertical;
-                width: 100%;
-                min-height: 120px;
-            }
+        .right-arrow {
+            position: absolute;
+            width: 150px;
+            height: 150px;
+            background-color: #38c4e5;
+            top: -18px;
+            right: -18px;
+            z-index: -1;
+            border-top-left-radius: 10px;
+            border-bottom-right-radius: 10px;
         }
 
-        .name-email {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 20px;
-            margin-bottom: 16px;
+        .left-arrow {
+            background-color: #ff9776;
+            bottom: -18px;
+            top: auto;
+            left: -18px;
+            @extend .right-arrow;
+        }
 
-            .name {
-                width: 100%;
-                input {
-                    box-shadow: 26px 22px 68px -18px rgb(127, 86, 217);
+        .heading {
+            font-size: 20px;
+            font-weight: 700;
+            color: #06241B;
+        }
+
+        .comment-form {
+            .comment {
+                margin-bottom: 16px;
+
+                textarea {
                     background-color: transparent;
                     border: 1px solid #7F56D9;
                     border-radius: 4px;
-                    height: 36px;
+                    max-height: max-content;
                     outline: none;
                     padding: 2px 6px;
                     font-size: 14px;
                     font-weight: 500;
                     color: #7F56D9;
+                    resize: vertical;
                     width: 100%;
+                    min-height: 120px;
                 }
             }
 
-            .email {
-                @extend .name;
+            .name-email {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 20px;
+                margin-bottom: 16px;
+
+                .name {
+                    width: 100%;
+
+                    input {
+                        box-shadow: 26px 22px 68px -18px rgb(127, 86, 217);
+                        background-color: transparent;
+                        border: 1px solid #7F56D9;
+                        border-radius: 4px;
+                        height: 36px;
+                        outline: none;
+                        padding: 2px 6px;
+                        font-size: 14px;
+                        font-weight: 500;
+                        color: #7F56D9;
+                        width: 100%;
+                    }
+                }
+
+                .email {
+                    @extend .name;
+                }
+            }
+
+        }
+
+        .comment-btn {
+            width: 100%;
+            margin-bottom: 12px;
+            height: 36px;
+            background-color: #7f56d9c2;
+            border: none;
+            border-radius: 6px;
+            font-size: 18px;
+            font-weight: 600;
+            color: #ffff;
+            cursor: pointer;
+            transition: all ease 0.5s;
+
+            &:hover {
+                background-color: #7F56D9;
             }
         }
 
-    }
-
-    .comment-btn {
-        width: 100%;
-        margin-bottom: 12px;
-        height: 36px;
-        background-color: #7f56d9c2;
-        border: none;
-        border-radius: 6px;
-        font-size: 18px;
-        font-weight: 600;
-        color: #ffff;
-        cursor: pointer;
-        transition: all ease 0.5s;
-
-        &:hover {
-            background-color: #7F56D9;
+        @media (min-width:0px) and (max-width:499px) {
+            max-width: 85%;
         }
-    }
 
-    @media (min-width:0px) and (max-width:499px) {
-        max-width: 90%;
-    }
+        @media (min-width:499px) and (max-width:700px) {
+            max-width: 75%;
+        }
 
-    @media (min-width:499px) and (max-width:700px) {
-        max-width: 75%;
-    }
+        @media (min-width:700px) and (max-width:900px) {
+            max-width: 70%;
+        }
 
-    @media (min-width:700px) and (max-width:900px) {
-        max-width: 70%;
-    }
+        @media (min-width:900px) and (max-width:1100px) {
+            max-width: 60%;
+        }
 
-    @media (min-width:900px) and (max-width:1100px) {
-        max-width: 60%;
     }
-
 }
-
 
 .f_danger {
     color: #ff000080;
