--- a/src/app/shared/components/course-list/course-list.component.scss
+++ b/src/app/shared/components/course-list/course-list.component.scss
@@ -7,6 +7,8 @@
     overflow: hidden;
     margin: 0px auto 5%;
     flex-wrap: wrap;
+    padding: 0px 2%;
+    max-width: 1400px;
 
     .cards {
         background-color: #fff;
